# QR_code_generator_with_API

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: generator.py  main.py  routing.py  schemas.py  settings.py
